# Structure_Example

./: README.md  how_to_run_test.txt  pyproject.toml  setup.cfg  tox.ini
src/pressButton/: __init__.py  like_button.py
test/: __init__.py  conftest.py  test_press.py
