[metadata]
name = pressButton
description = press that like pressButton
author = Roberto Lucchetti

platform = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[option]
package = 
    pressButton
install_requires =
    requests>=2
python_requires = >=3.7
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
[options.package_data]
pressButton = py.typed

[flake8]
max-line-lenght = 160

